<resources>
    <string name="app_name">Tar Tracker</string>

    <!-- Default Entries -->
    <string name="hello_world">Hello world!</string>

    <!-- Menu Items -->
    <string name="action_settings">Settings</string>

    <!-- Main Activity -->
    <string name="title_main_Activity">Main</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_game">Game</string>
    <string name="button_personal">Personal</string>
    <string name="current_state">Suprisingly Sober</string>
    <string name="button_reset">Reset</string>
    <string name="bac_title">BAC</string>
    <string name="bac_display_value_default">.00</string>
    <string name="drink_count_label">Drink Count</string>
    <string name="drink_count_value_default">0</string>
    <string name="sobriety_suprisingly_sober">Suprisingly Sober!</string>
    <string name="sobriety_sober">Sober</string>
    <string name="sobriety_tipsy">Tipsy</string>
    <string name="sobriety_drunk">Drunk</string>
    <string name="sobriety_danger_drunk">Really Drunk</string>
    <string name="sobriety_leathaly_drunk">You Should Be Dead!</string>

    <!-- Settings (Preferences) Activity -->
    <string name="title_activity_settings">Preferences</string>

    <string name="user_name_label">Name</string>
    <string name="user_name_hint">Enter your name</string>
    <string name="user_gender_label">Gender</string>
    <string name="toggle_male">Male</string>
    <string name="toggle_female">Female</string>
    <string name="user_age_label">Age</string>
    <string name="user_weight_label">Weight</string>
    <string-array name="genders">
        <item>MALE</item>
        <item>FEMALE</item>
    </string-array>
    <string-array name="gender_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="underage_title">Underage BAC Limit</string>
    <string name="underage_bac_summary">Underage BAC Limit</string>
    <string name="underage_bac_default_value">0.02%</string>
    <string name="per_se_title">\"Per Se\" BAC Limit</string>
    <string name="per_se_summary">Normal BAC Limit</string>
    <string name="per_se_bac_default_value">0.08%</string>
    <string name="enhanced_title">Enhanced BAC Limit</string>
    <string name="enhanced_summary">Enhanced (Aggravated) BAC Limit</string>
    <string name="enhanced_bac_default_value">0.15%</string>
    <string name="drinking_age_title">Drinking Age</string>
    <string name="drinking_age_summary">Legal Drinking Age</string>
    <string name="drinking_age_default_value">21</string>
    <string name="title_activity_edit_preferences">Edit Preferences</string>

    <!-- Number Game Activity -->
    <string name="number_missed_label">Number Missed:</string>
    <string name="number_missed_value_default">0</string>
    <string name="title_activity_game">Tar Tracker - Number Game</string>

    <!-- DatabaseManager -->
    <string name="insert_error">Insert Error</string>
    <string name="insert_ok">Record Inserted</string>
    <string name="no_data_found">No data found</string>

    <!-- Personal Settings -->
    <string name="title_activity_personal_settings">Personal Settings</string>

    <string name="button_save_label">Save</string>
    <string name="button_cancel_label">Cancel</string>
    <string name="title_activity_update_bac">UpdateBac</string>
    <string name="name_error">Please enter your name</string>
    <string name="age_error">Please enter your age</string>
    <string name="weight_error">Please enter your weight</string>
</resources>
