<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="user_name"
        android:title="@string/user_name_label"
        android:summary="@string/user_name_hint"
        />

    <EditTextPreference
        android:key="user_age"
        android:title="@string/user_age_label"
        android:numeric="integer"
        />

    <ListPreference
        android:key="user_gender"
        android:title="@string/user_gender_label"
        android:entries="@array/genders"
        android:entryValues="@array/gender_values"
        android:defaultValue="0"
        />

    <EditTextPreference
        android:key="user_weight"
        android:title="@string/user_weight_label"
        android:numeric="integer"
        />

    <EditTextPreference
        android:key="underage_bac_limit"
        android:title="@string/underage_title"
        android:summary="@string/underage_bac_summary"
        android:defaultValue="0.02"
        android:numeric="decimal"
        />

    <EditTextPreference
        android:key="per_se_bac_limit"
        android:title="@string/per_se_title"
        android:summary="@string/per_se_summary"
        android:defaultValue="0.08"
        android:numeric="decimal"
        />

    <EditTextPreference
        android:key="enhanced_bac_limit"
        android:title="@string/enhanced_title"
        android:summary="@string/enhanced_summary"
        android:defaultValue="0.15"
        android:numeric="decimal"
        />

    <EditTextPreference
        android:key="drinking_age"
        android:title="@string/drinking_age_title"
        android:summary="@string/drinking_age_summary"
        android:defaultValue="21"
        android:numeric="integer"
        />

</PreferenceScreen>