<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.rollins.cms395.tartracker.EditPreferencesFragment">

    <TextView
        android:id="@+id/underage_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underage_title"
        android:hint="@string/underage_bac_summary"
        style="@style/textViewStyle"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/underage_bac_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underage_bac_default_value"
        android:layout_toRightOf="@id/underage_label"
        android:layout_alignBottom="@id/underage_label"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"
        />

</RelativeLayout>
