<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_main"
                android:layout_weight="1"
                style="@style/buttonStyle"
                />
            <Button
                android:id="@+id/button_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_game"
                android:layout_weight="1"
                android:onClick="loadGame"
                style="@style/buttonStyle"
                />
            <Button
                android:id="@+id/button_preferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_preferences"
                android:layout_weight="1"
                style="@style/buttonStyle"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight=".40">

            <TextView
                android:id="@+id/current_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/current_state"
                android:gravity="center"
                android:textSize="40sp"
                style="@style/textViewStyle"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight=".60">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <TextView
                android:id="@+id/drink_count"
                android:layout_width="63dp"
                android:layout_height="match_parent"
                android:text="@string/drink_count_value_default"
                android:textSize="40sp"
                android:gravity="center"
                style="@style/textViewStyle"
                />
            <ImageButton
                android:id="@+id/button_add_drink"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/beer_glass_color"
                android:layout_weight=".35"
                android:scaleType="fitXY"
                android:onClick="onClickAddDrink"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/bac_title_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bac_title"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="30sp"
                    style="@style/textViewStyle"
                    />
                <TextView
                    android:id="@+id/bac_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bac_display_value_default"
                    android:textSize="30sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    style="@style/textViewStyle"
                    />
                <Button
                    android:id="@+id/button_reset"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_reset"
                    android:layout_weight="1"
                    android:onClick="onClickResetButton"
                    style="@style/buttonStyle"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
